# apriltags_rgbd_node

./: CMakeLists.txt  package.xml  setup.py
launch/: node.launch
src/: LM_minimize.py  apriltag_rgbd_node.py  bayesplane.py  rigid_transform.py  transform_fuser.py
src/apriltags_rgbd_node/: apriltag_rgbd_node.py  plane.py  rgb_depth_fuse.py
